spaces only as a separator for artist label and title, fix for spacing when received notification, bar height should stay the same

--- a/.config/ags/scss/widgets/notifications.scss
+++ b/.config/ags/scss/widgets/notifications.scss
@@ -111,3 +111,7 @@
         }
     }
 }
+
+.notifications-button .notifications box {
+    padding: 0;
+}
